# udacity-ai-programming-project

./: .gitignore  Image Classifier Project.html  Image Classifier Project.ipynb  README.md  flower_data.tar.gz.dvc  pyproject.toml
.dvc/: config
.github/workflows/: cli-automation.yml  jupyter-automation.yml
models/: checkpoint.pth.dvc  densenet121-1024-4-0.0004.pth.dvc  densenet121-2048-5-0.0004.pth.dvc  densenet121-4096-6-0.0004.pth.dvc  resnet50-1024-6-0.0004.pth.dvc  resnet50-2048-6-0.0004.pth.dvc  resnet50-4096-6-0.0004.pth.dvc  vgg16-1024-6-0.0004.pth.dvc  vgg16-2048-6-0.0004.pth.dvc  vgg16-4096-6-0.0004.pth.dvc  vgg16-512-8-0.0004.pth.dvc
src/udacity/project/aipnd/classifier/: model.py  predict.py  train.py
